[package]
name = "sidereal"
version = "0.1.0"
authors = ["Matt Cook <hello@mattcook.dev>"]
edition = "2021"
description = "A Redis clone for fun and learning"
readme = "README.md"
repository = "https://github.com/sciencefidelity/sidereal"
license = "MIT or Apache-2.0"
exclude = ["./scripts"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0"
bytes = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
